# django-rusty-templates

./: AI_POLICY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  justfile
.github/workflows/: build.yml  codspeed.yml  lint.yml  python.yml  rust.yml
dtl-lexer/: Cargo.toml
dtl-lexer/src/: core.rs  tag.rs
dtl-lexer/src/tag/: firstof.rs  forloop.rs
scripts/: django_tests_use_rusty_templates.patch
src/: parse.rs  template.rs
src/render/: tags.rs
tests/tags/: test_firstof.py  test_for.py
