
[package]
name = "django-rusty-templates"
version = "0.1.0"
edition.workspace = true

[package.metadata.cargo-shear]
ignored = ["cargo-llvm-cov"]

[workspace]
members = ["dtl-benchmark", "dtl-lexer"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.94"

[workspace.dependencies]
miette = { version = "7.6.0", features = ["fancy"] }
num-bigint = "0.4.6"
thiserror = "2.0.16"

[workspace.metadata.typos]
[workspace.metadata.typos.files]
extend-exclude = ["src/render/lorem.rs", "test_if.py"]

[workspace.lints.clippy]
# See https://rust-lang.github.io/rust-clippy/rust-1.91.0/index.html
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
unwrap_used = "deny"

# TODO: But require a lot of changes
needless_pass_by_value = "allow"
# TODO: Rename `content` variables clashing with `context` to something mre accurate in their context
#       for ex `variable` or `node` or `part` or `element`
similar_names = "allow"
# Todo: We have a bunch failing I don't know how to fix (`Context` / `Filter` / `Template`)
struct_field_names = "allow"

# Not production ready for rust stable
missing_const_for_fn = "allow" # 42
# I find it less easy to understand (and there is a lot to fix manually)
match_same_arms = "allow"
# Lots of documented false positives
must_use_candidate = "allow"
# We are not mature enough to enable public api documentation related lints.
missing_errors_doc = "allow"
# Pattern matching is more compact and readable.
single_match_else = "allow"
match_bool = "allow"
option_if_let_else = "allow"
# Python convention for private methods.
used_underscore_items = "allow"
# We are facing the documented known issue.
format_push_string = "allow"
# This was only an issue for rust version < 1.82
inefficient_to_string = "allow"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "django_rusty_templates"
# rlib is required for benchmarks
crate-type = ["cdylib", "rlib"]

[dependencies]
cached = "0.58.0"
dtl-lexer = { path = "dtl-lexer" }
either = "1.15.0"
encoding_rs = "0.8.35"
html-escape = "0.2.13"
miette.workspace = true
num-bigint.workspace = true
num-traits = "0.2.19"
pyo3 = { version = "0.28.0", features = ["num-bigint"] }
rand = "0.10"
sugar_path = "2.0.0"
thiserror.workspace = true
unicode-normalization = "0.1.24"

[dev-dependencies]
cargo-llvm-cov = "0.8.0"

proptest = "1.10.0"
temp-env = "0.3.6"
